# riot-api

./: .dockerignore  .env.example  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: router.py
app/clients/: riot.py
app/core/: cache.py  config.py  cors.py  errors.py  rate_limit.py  regions.py  request_id.py  riot_headers.py
app/db/: __init__.py  lifecycle.py  migrations.py  session.py
app/schemas/: account.py  champion.py  matches.py  player.py  ranked.py  spectator.py  status.py  summoner.py
app/services/: account_service.py  champion_service.py  match_service.py  player_service.py  ranked_service.py  spectator_service.py  status_service.py  summoner_service.py
database/init/: 001_database_defaults.sql
docs/: api.md  architecture.md  configuration.md  development.md  openapi.json  setup.md
migrations/: env.py
scripts/: db-migrate.sh  dev.sh  export-openapi.sh  prod.sh
tests/: conftest.py  test_account_routes.py  test_account_service.py  test_cache.py  test_champion_routes.py  test_champion_service.py  test_config.py  test_cors.py  test_database_lifecycle.py  test_health.py  test_match_routes.py  test_match_service.py  test_player_routes.py  test_player_service.py  test_ranked_routes.py  test_ranked_service.py  test_rate_limit.py  test_regions.py  test_riot_client.py  test_riot_headers.py  test_spectator_routes.py  test_spectator_service.py  test_status_routes.py  test_status_service.py  test_summoner_routes.py  test_summoner_service.py
(+9 files in other folders)
